fixed a bug that broke the timeline play button increased the height of the timeline to avoid the scrollbar

--- a/css/map.css
+++ b/css/map.css
@@ -193,7 +193,7 @@ input:checked + .slider:before {
     z-index: 14;
     overflow-x: hidden;
     width: 402px;
-    height: 65px;
+    height: 68px;
     display: flex;
     align-items: center;
 }
